# utf8-php-ext

./: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  config.m4  config.w32  php_utf8.h  utf8.c  utf8_charlen.h  utf8_decode.h  utf8_encode.h  utf8_func.c  utf8_func.h
tests/: utf8_chr.phpt  utf8_ltrim_1.phpt  utf8_ltrim_2.phpt  utf8_ord.phpt  utf8_rtrim_1.phpt  utf8_rtrim_2.phpt  utf8_str_pad_1.phpt  utf8_str_pad_2.phpt  utf8_str_pad_3.phpt  utf8_str_pad_4.phpt  utf8_str_pad_5.phpt  utf8_str_split_1.phpt  utf8_str_split_2.phpt  utf8_str_split_3.phpt  utf8_strlen.phpt  utf8_strpos.phpt  utf8_strrev_1.phpt  utf8_strrev_2.phpt  utf8_substr_1.phpt  utf8_substr_2.phpt  utf8_substr_3.phpt  utf8_substr_4.phpt  utf8_substr_5.phpt  utf8_substr_6.phpt  utf8_substr_7.phpt  utf8_substr_8.phpt  utf8_trim_1.phpt  utf8_trim_2.phpt
